added pivotDate to DateModule methods

--- a/np.Templating/__tests__/factories/invalid-syntax.ejs
+++ b/np.Templating/__tests__/factories/invalid-syntax.ejs
@@ -1,2 +1,3 @@
-<% names.forEach((name, i) => {
-%> <%= i === names.length - 1 ? titleCase(name) : titleCase(name) + '\n' %><%});
+<% names.forEach((name, i)=> {
+	%> <%= i===names.length - 1 ? titleCase(name) : titleCase(name) + '\n' %>
+		<%});
