--- a/np.Templating/__tests__/factories/tags-extended.ejs
+++ b/np.Templating/__tests__/factories/tags-extended.ejs
@@ -5,5 +5,5 @@
 **Using custom variables and native JavaScript style looping**
 Erickson family names:
 <% names.forEach((name, i) => {
-%><%= i === names.length - 1 ? utils.titleCase(name) : utils.titleCase(name) + ' \n' %>
+%><%- i === names.length - 1 ? utils.titleCase(name) : utils.titleCase(name) + ' \n' %>
 		<%});%>
