--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -39,12 +39,17 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 .sectionIcon {
 	font-size: 1.0rem;
 	font-weight: 400;
+	text-align: center;
 }
 .sectionItem { /* reduce vertical spacing and line below */
 	font-size: 1.0rem;
 	font-weight: 400;
 	padding: 2px 4px;
 	border-bottom: 0px;
+}
+.lowerPriority { /* show italic */
+	font-weight: 300;
+	font-style: italic;
 }
 .clickTarget { /* change cursor for icons which can be clicked on */
 	cursor: pointer;
@@ -98,3 +103,32 @@ a:hover {
 #error {
 	background-color: red;
 	padding-left: 10px; }
+
+/* TODO: For fancy toggle as checkbox */
+.toggler-wrapper {
+  display: block;
+  width: 45px;
+  height: 25px;
+  cursor: pointer;
+  position: relative;
+}
+.toggler-wrapper input[type="checkbox"] {
+  display: none;
+}
+.toggler-wrapper input[type="checkbox"]:checked+.toggler-slider {
+  background-color: #44cc66;
+}
+.toggler-wrapper .toggler-slider {
+  background-color: #ccc;
+  position: absolute;
+  border-radius: 100px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms ease;
+}
+.toggler-wrapper .toggler-knob {
+  position: absolute;
+  transition: all 300ms ease;
+}
