--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -104,31 +104,44 @@ a:hover {
 	background-color: red;
 	padding-left: 10px; }
 
-/* TODO: For fancy toggle as checkbox */
-.toggler-wrapper {
-  display: block;
-  width: 45px;
-  height: 25px;
-  cursor: pointer;
+/* For fancy toggle as checkbox */
+/* from [Pure CSS3 iOS switch checkbox. A switch allows the user to quickly… | by Pedro M. S. Duarte | codeburst](https://codeburst.io/pure-css3-input-as-the-ios-checkbox-8b6347d5cefb)
+ */
+input.apple-switch {
   position: relative;
+	margin-top: 1px;
+  -webkit-appearance: none;
+  outline: none;
+  width: 2.0rem; /* 50px; */
+  height: 1.1rem; /* 30px; */
+  background-color: #fff;
+  border: 1px solid #D9DADC;
+  border-radius: 2.0rem; /* 50px; */
+  box-shadow: inset -0.8rem 0 0 0 #fff; /* -20px */
 }
-.toggler-wrapper input[type="checkbox"] {
-  display: none;
-}
-.toggler-wrapper input[type="checkbox"]:checked+.toggler-slider {
-  background-color: #44cc66;
-}
-.toggler-wrapper .toggler-slider {
-  background-color: #ccc;
+
+input.apple-switch:after {
+  content: "";
   position: absolute;
-  border-radius: 100px;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition: all 300ms ease;
+  top: 1px;
+  left: 1px;
+  background: transparent;
+  width: 1.0rem; /* 26px; */
+  height: 1.0rem; /* 26px; */
+  border-radius: 50%;
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.5);
+	margin-right: 1.0rem;
 }
-.toggler-wrapper .toggler-knob {
-  position: absolute;
-  transition: all 300ms ease;
+
+input.apple-switch:checked {
+  box-shadow: inset 0.8rem 0 0 0 #4ed164; /* 20px; */
+  border-color: #4ed164;
+}
+
+input.apple-switch:checked:after {
+  left: 0.8rem; /* 20px; */
+  box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
+}
+input, label {
+	vertical-align: top;
 }
