--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -46,6 +46,7 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 	font-weight: 400;
 	padding: 2px 4px;
 	border-bottom: 0px;
+	break-inside: avoid;
 }
 .lowerPriority { /* show italic */
 	font-weight: 300;
@@ -88,7 +89,11 @@ a:hover {
 	column-count: 3;
 	column-width: 25rem;
 	column-gap: 1rem;
-	column-rule: 1px dotted var(--tint-color); }
+	column-rule: 1px dotted var(--tint-color);
+}
+.avoidColumnBreakHere { /* apply to a <div> to avoid column break part-way through item */
+	break-inside: avoid;
+}
 .fadeOutAndHide { /* Class to fade out an item, from https://stackoverflow.com/a/20910008 */
 	visibility: hidden;
 	opacity: 0;
@@ -129,7 +134,7 @@ input.apple-switch:after {
   width: 1.0rem; /* 26px; */
   height: 1.0rem; /* 26px; */
   border-radius: 50%;
-  box-shadow: 2px 4px 6px rgba(0,0,0,0.5);
+  box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
 	margin-right: 1.0rem;
 }
 
