--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -41,6 +41,9 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 	font-weight: 400;
 	text-align: center;
 }
+.review {
+	color: var(--tint-color);
+}
 .sectionItem { /* reduce vertical spacing and line below */
 	font-size: 1.0rem;
 	font-weight: 400;
@@ -61,7 +64,9 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 .space-under {	/* add space after icon */
 	padding-bottom: 0.1em;
 }
-.scheduledDate { color: var(--tint-color); }
+.scheduledDate {
+	color: var(--tint-color);
+}
 a, a:visited, a:active { /* all links turn off text color and underlining by default */
 	color: inherit;
 	text-decoration: none;
