--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -1,4 +1,5 @@
 /* CSS specific to showDashboard() from jgclark.Dashboard plugin */
+/* Last updated 22.7.2023 for v0.6.0 by @jgclark */
 
 table { font-size: 1.0rem; /* used to make text a little smaller at 0.9rem */
 	border-collapse: collapse; /* always! */
@@ -155,4 +156,58 @@ input.apple-switch:checked:after {
 }
 input, label {
 	vertical-align: top;
+}
+
+.moveButton, .changeDateButton { /* compact 'buttons' for hoverExtraControls */
+	background-color: #FFF;
+	font-size: 0.76rem;
+	font-weight: 400;
+	border-radius: 4px;
+	border: 1px dotted var(--tint-color);
+	box-shadow: 0 1px 1px 0px #CBCBCB;
+	padding: 0px 3px 0px 3px;
+	margin: 0px 1px;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+.tooltip .hoverExtraControls {
+  visibility: hidden;
+  /* width: 9rem; */ /* browser calculates better than I can */
+  /* height: 1.2rem; */ /* browser calculates better than I can */
+  line-height: 1.2rem;
+  padding: 2px;
+  /* font-size: 14px; */
+  text-align: center;
+  /* color: rgb(113, 157, 171); */
+  background: #88888820; /* hopefully OK for light and dark */
+  border: 2px solid #88888820;
+  border-radius: 5px;
+  /* text-shadow: rgba(0, 0, 0, 0.1) 1px 1px 1px; */
+  /* box-shadow: rgba(0, 0, 0, 0.1) 1px 1px 2px 0px; */
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  transition: opacity 250ms 1000ms; /* after 1s fade in quite quickly */
+}
+
+.tooltip .hoverExtraControls::after {
+  content: "";
+  position: absolute;
+  /* width: 0;
+  height: 0; */
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #88888820 transparent transparent transparent; /* downwards arrow */
+  border-color: transparent transparent #88888820 transparent; /* upwards arrow */
+  top: -50%;
+  left: 50%;
+}
+
+.tooltip:hover .hoverExtraControls {
+  visibility: visible;
+  opacity: 1;
 }
