--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -68,12 +68,12 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 .scheduledDate {
 	color: var(--tint-color);
 }
-div, div:visited, div:active { /* all links turn off text color and underlining by default */
+div.content, div.content:visited, div.content:active { /* all links turn off text color and underlining by default */
 	color: inherit;
 	text-decoration: none;
 	cursor: pointer;
 }
-div:hover {
+div.content:hover {
 	text-decoration: underline;
 	/* text-decoration-color: var(--tint-color); */
 }
@@ -81,11 +81,6 @@ div:hover {
 	text-decoration: underline;
 	cursor: pointer;
 	color: var(--tint-color);
-}
-.externalLink::before {
-	content: "\1F9ED  ";
-	/* color: var(--tint-color); */
-	text-decoration: none;
 }
 .event-link {
 	font-weight: 400;
@@ -166,15 +161,29 @@ input, label {
 	vertical-align: top;
 }
 
+.mainButton { /* main UI buttons */
+	/* background-color: #FFF; /* should be inherited */
+	font-size: 1.0rem;
+	font-weight: 500;
+	/* border-radius: 4px; */
+	border: 1px var(--tint-color);
+	box-shadow: 0 1px 1px 0px #CBCBCB;
+	padding: 2px 5px 2px 5px;
+	margin: 2px 4px;
+}
+.mainButton:hover {
+	background-color: #EEE;
+	transition: 0.2s;
+}
+
 .moveButton, .changeDateButton { /* compact 'buttons' for hoverExtraControls */
-	background-color: #FFF;
 	font-size: 0.76rem;
 	font-weight: 400;
 	border-radius: 4px;
-	border: 1px dotted var(--tint-color);
-	box-shadow: 0 1px 1px 0px #CBCBCB;
+	border: 1px solid var(--tint-color);
+	box-shadow: 0px 0px 1px 0px #CBCBCB;
 	padding: 0px 3px 0px 3px;
-	margin: 0px 1px;
+	margin: 1px 1px;
 }
 
 .tooltip {
@@ -188,7 +197,7 @@ input, label {
   line-height: 1.2rem;
   padding: 2px;
   /* font-size: 14px; */
-  text-align: center;
+  text-align: left;
   /* color: rgb(113, 157, 171); */
   background: #88888820; /* hopefully OK for light and dark */
   border: 2px solid #88888820;
