--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -124,27 +124,28 @@ div.content:hover {
  */
 input.apple-switch {
   position: relative;
-	margin-top: 1px;
   -webkit-appearance: none;
   outline: none;
   width: 2.0rem; /* 50px; */
   height: 1.1rem; /* 30px; */
-  background-color: #fff;
-  border: 1px solid #D9DADC;
+  background-color: #EEE;
+  border: 1px solid #DDD;
   border-radius: 2.0rem; /* 50px; */
-  box-shadow: inset -0.8rem 0 0 0 #fff; /* -20px */
+  /* box-shadow: inset -0.8rem 0 0 0 #fff; /* -20px */
+	margin-top: 0px;
+	margin-right: 4px;
 }
 
 input.apple-switch:after {
   content: "";
   position: absolute;
-  top: 1px;
+  top: 0px;
   left: 1px;
-  background: transparent;
+  background: #FFF;
   width: 1.0rem; /* 26px; */
   height: 1.0rem; /* 26px; */
   border-radius: 50%;
-  box-shadow: 2px 4px 6px rgba(0,0,0,0.2);
+  box-shadow: 1px 0px 1px rgba(0,0,0,0.3);
 	margin-right: 1.0rem;
 }
 
