--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -48,9 +48,10 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 .sectionItem { /* reduce vertical spacing and line below */
 	font-size: 1.0rem;
 	font-weight: 400;
-	padding: 2px 4px;
+	padding: 1px 4px;
 	border-bottom: 0px;
 	break-inside: avoid;
+	vertical-align: baseline;
 }
 .lowerPriority { /* show italic */
 	font-weight: 300;
@@ -62,8 +63,8 @@ table tr { /* turn on top and bottom border (from theme CSS) */
 .pad-right {	/* add space after icon */
 	padding-right: 0.4em;
 }
-.space-under {	/* add space under icon */
-	padding-bottom: 0.1em;
+.space-under {	/* add space under item */
+	padding-bottom: 0.3em;
 }
 .scheduledDate {
 	color: var(--tint-color);
