--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -1,9 +1,47 @@
 /* CSS specific to showDashboard() from jgclark.Dashboard plugin */
-/* Last updated 12.8.2023 for v0.6.0 by @jgclark */
+/* Last updated 9.3.2024 for v1.0.0 by @jgclark */
 
+:root {
+	/* FIXME: not working */
+	--minBreakPoint: 500px;
+}
+
+body {
+	margin: 0px;
+}
 
 /* ------------------------------------------------------------------ */
 /* New settings for Grid-based layout */
+.header {
+	display: grid;
+	grid-template-columns: [refresh] auto [info] 1fr [controls] auto;
+	/* a little spacing around this */
+	padding: 0.4rem 0.5rem 0.2rem;
+	/* a little extra gap between first 2 cols */
+	grid-column-gap: 6px;
+	background-color: var(--bg-alt-color);
+	font-size: 0.85rem;
+	/* fix position to top */
+	position: sticky;
+	top: 0px;
+	border-bottom: 1.0px solid var(--tint-color);
+}
+
+.header div:last-child {
+	/* right align  */
+	justify-self: end;
+}
+
+.totalCounts {
+	display: inline-block;
+}
+/* Unless the screen size is 500px wide or less, hide the element */
+/* @media screen and (width <= var(--minBreakPoint)) { */
+@media screen and (width <= 500px) {
+  div.totalCounts {
+    display: none;
+  }
+}
 
 /* Large rows on page; don't want these in a grid as we want height to vary */
 .sections {
@@ -14,38 +52,43 @@
 
 .section {
 	display: grid;
-	/* turn on top border (from theme CSS) */
-	border-top: solid 1px var(--tint-color);
-	/* light brown-grey */
-	/* background: rgba(160, 80, 20, 0.15); */
-	grid-template-columns: [info] minmax(8rem, 10rem) [items] auto;
-	/* a little spacing at top and bottom of section */
-	padding: 2px 2px;
+  grid-template-columns: [info] minmax(6rem,10rem) [items] auto;
+  grid-template-rows: min-content;
+	/* grid-auto-flow: column; */
+  
 	/* a little extra gap between first 2 cols */
 	grid-column-gap: 6px;
 	column-rule: 1px dotted var(--tint-color);
-}
 
-.section:last-child {
-	/* turn on bottom border of last item (from theme CSS) */
+	/* a little spacing at top and bottom of section */
+	/* padding: 2px 2px; */
+	/* turn on top border (from theme CSS) */
 	border-bottom: solid 1px var(--tint-color);
 }
 
-/* turn off all borders */
-/* .no-borders { 
-	border-top: none 0px;
-	border-bottom: none 0px;
-} */
-.sectionName { /* column 2's title */
-	font-size: 1.0rem;
-	font-weight: 700; /* make noteTitles bold */
-	margin: unset;
-	padding-block-start: 0.1rem;
-	padding-block-end: 0.3rem;
+/* New for a2: [items] slides under [info] if too narrow */
+/* @media screen and (width <= var(--minBreakPoint)) { */
+@media screen and (width <= 600px) {
+  .section {
+    grid-template-columns: 1fr;
+  }
+	.sectionInfo {
+		border-bottom: solid 0.5px var(--tint-color);
+	}
 }
-.sectionDescription { /* column 2's description */
-	font-size: 0.85rem; /* smaller */
-	margin: unset;
+
+/* turn on bottom border of last item (from theme CSS) */
+/* .section:last-child {
+	border-bottom: solid 1px var(--tint-color);
+} */
+
+.sectionInfo {
+	display: block;
+	padding-block-start: 3px;
+	padding-block-end: 3px;
+	padding-inline-start: 0.5rem;
+	padding-inline-end: 0.5rem;
+	background-color: var(--bg-alt-color);
 }
 .sectionIcon {
 	font-size: 1.2rem;
@@ -53,21 +96,28 @@
 	text-align: center;
 	padding-right: 0.3rem;
 }
-.sectionInfo {
-	display: block;
-	padding-block-start: 6px;
-	/* grid-auto-flow: column; */
+.sectionName { /* column 1's title */
+	font-size: 1.0rem;
+	font-weight: 700; /* make noteTitles bold */
+	margin: unset;
+	padding-block-start: 0.1rem;
+	padding-block-end: 0.3rem;
+}
+.sectionDescription { /* column 1's description */
+	font-size: 0.85rem; /* smaller */
+	margin: unset;
 }
 
 /* Inner grid for details of a section */
 .sectionItemsGrid {
+	padding-inline-start: 0.3rem;
 	font-size: 1.0rem;
 	/* allow multi-column flow: set max columns and min width, and some other bits and pieces. Reference: https://drafts.csswg.org/css-multicol/#the-multi-column-model */
 	column-count: 3;
 	column-fill: balance;
 	/* or auto */
 	column-width: 25rem;
-	column-gap: 1rem;
+	/* column-gap: 1rem; */
 	column-rule: 1px dotted var(--tint-color);
 	column-fill: auto;
 }
@@ -105,6 +155,7 @@
 .dialogTrigger {
   color: var(--fg-main-color);
   opacity: 0.8;
+	cursor: pointer;
 }
 /* The actual item's details (was col4) */
 .sectionItem {
