--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -18,7 +18,7 @@ body {
 	/* a little spacing around this */
 	padding: 0.4rem 0.5rem 0.2rem;
 	/* a little extra gap between first 2 cols */
-	grid-column-gap: 6px;
+	grid-column-gap: 0.5rem;
 	background-color: var(--bg-alt-color);
 	font-size: 0.85rem;
 	/* fix position to top */
@@ -33,7 +33,8 @@ body {
 }
 
 .totalCounts {
-	display: inline-block;
+	display: block;
+	align-self: end;
 }
 /* Unless the screen size is 500px wide or less, hide the element */
 /* @media screen and (width <= var(--minBreakPoint)) { */
@@ -177,6 +178,17 @@ body {
 
 /* ------------------------------------------------------------------ */
 
+/* for main UI buttons */
+.mainButton { /* main UI action buttons: a little more pronounced */
+	background-color: var(--bg-alt-color);
+	font-size: 0.9rem;
+	font-weight: 600;
+	border: 1px var(--tint-color);
+	box-shadow: 0 1px 1px 0px rgba(0,0,0,0.3); /*#888;*/
+	padding: 2px 5px 2px 5px;
+	margin: 2px 4px;
+}
+
 /* For buttons that trigger callbacks */
 .XCBButton {
 	color: var(--fg-main-color);
@@ -185,8 +197,8 @@ body {
 	/* border-color: #DFE0E0; */
 	border-style: none;
 	border-radius: 4px;
-	box-shadow: 1px 1px 1px 0px var(--bg-alt-color);
-	padding: 0px 3px 0px 3px;
+	box-shadow: 1px 1px 1px 0px var(--fg-main-color);
+	padding: 2px 3px 0px 3px;
 	/* margin: 2px 4px; */
 	white-space: nowrap;
 	cursor: pointer;
@@ -312,12 +324,15 @@ body {
 	padding-left: 10px;
 }
 
+/* ------------------------------------------------------------------- */
+
 /* For fancy toggle as checkbox */
 /* from [Pure CSS3 iOS switch checkbox. A switch allows the user to quickly… | by Pedro M. S. Duarte | codeburst](https://codeburst.io/pure-css3-input-as-the-ios-checkbox-8b6347d5cefb)
  */
 input.apple-switch {
   position: relative;
-  -webkit-appearance: none;
+  appearance: none;
+	vertical-align: top;
   outline: none;
   width: 2.0rem; /* 50px; */
   height: 1.1rem; /* 30px; */
@@ -331,6 +346,7 @@ input.apple-switch {
 
 input.apple-switch:after {
   content: "";
+	vertical-align: top;
   position: absolute;
   top: 0px;
   left: 1px;
@@ -343,26 +359,13 @@ input.apple-switch:after {
 }
 
 input.apple-switch:checked {
+	vertical-align: top;
   box-shadow: inset 0.8rem 0 0 0 #4ed164; /* 20px; */
   border-color: #4ed164;
 }
 
 input.apple-switch:checked:after {
-  left: 0.8rem; /* 20px; */
-  box-shadow: -2px 4px 3px rgba(0,0,0,0.05);
-}
-
-input, label {
 	vertical-align: top;
-}
-
-.mainButton { /* main UI buttons */
-	/* background-color: #FFF; /* should be inherited */
-	font-size: 1.0rem;
-	font-weight: 500;
-	/* border-radius: 4px; */
-	border: 1px var(--tint-color);
-	box-shadow: 0 1px 1px 0px #CBCBCB;
-	padding: 2px 5px 2px 5px;
-	margin: 2px 4px;
+  left: 0.8rem; /* 20px; */
+  box-shadow: -2px 4px 3px rgba(0,0,0,0.1); /* 0.05;*/
 }
