--- a/jgclark.Dashboard/requiredFiles/dashboardDialog.css
+++ b/jgclark.Dashboard/requiredFiles/dashboardDialog.css
@@ -8,13 +8,13 @@ dialog:modal {
 
 dialog {
   /* Unset the margin around it, to allow absolute positioning by left/top */
-  margin: 0px;
+  margin: 0rem;
   color: var(--fg-main-color);
   background: var(--bg-main-color);
   padding: 0rem;
   border: solid 1px var(--tint-color);
   border-radius: 0.5em;
-  box-shadow: 0px 0px 10px 2px #CCC;
+  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3); /*#888;*/
 }
 
 .dialogTitle {
@@ -24,7 +24,7 @@ dialog {
   padding-inline-end: 1rem;
   padding-block-end: 0.2rem;
   border-block-end: 1px solid gray;
-  margin-block-end: 4px;
+  /* margin-block-end: 4px; */
 }
 
 .dialogItemNote {
@@ -46,21 +46,26 @@ dialog {
   display: grid;
   /* grid-template-columns: max-content minmax(15rem, 28rem); */
   grid-template-columns: max-content minmax(15rem, auto);
-  column-gap: 4px;
-  row-gap: 4px;
+  column-gap: 0.3rem;
+  row-gap: 0.3rem;
   /* vertically align content items in center */
   align-items: center; 
 }
 
 .buttonGrid div:nth-child(odd) {
-  align-self: start;
-  padding-block-start: 5px;
+  align-self: center; /*start;*/
+  /* padding-block-start: 5px; */
   justify-self: end;
 }
 
 .buttonGrid div:nth-last-child(1) {
-  /* FIXME: Put last div on RHS */
+  /* Put very last div (Close button) on RHS */
   justify-self: end;
+}
+
+.buttonGrid div:nth-child(1) {
+  /* Put very first div down a bit to try to align with input field */
+  padding-block-start: 5px;
 }
 
 @layer A {
@@ -70,19 +75,20 @@ dialog {
     border-radius: 4px;
     background: var(--bg-alt-color);
     border: 1px solid var(--tint-color);
-    /* box-shadow: 1px 1px 1px 0px #BBB; */
+    box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.3); /*#888;*/
     padding: 1px 4px 1px 4px;
     margin: 3px 1px;
   }
 }
 
+/* TODO: Currently unused */
 .submitButton {
   /* submit buttons (or what appear to be ...) */
   font-size: 0.85rem;
   font-weight: 500;
   background: var(--bg-main-color);
   border: 1px var(--fg-main-color);
-  box-shadow: 1px 1px 1px 0px #BBB;
+  box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.3); /*#888;*/
   padding: 2px 5px 2px 5px;
   margin: 2px 4px;
 }
