--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -85,8 +85,8 @@ body {
 
 .sectionInfo {
 	display: block;
-	padding-block-start: 7px;
-	padding-block-end: 3px;
+	padding-block-start: 8px;
+	padding-block-end: 6px;
 	padding-inline-start: 0.5rem;
 	padding-inline-end: 0.5rem;
 	background-color: var(--bg-alt-color);
@@ -197,9 +197,9 @@ body {
 	/* border-color: #DFE0E0; */
 	border-style: none;
 	border-radius: 4px;
-	box-shadow: 1px 1px 1px 0px var(--fg-main-color);
+	box-shadow: 1px 1px 1px 0px rgb(from var(--fg-main-color) r g b / 0.3);
 	padding: 2px 3px 0px 3px;
-	/* margin: 2px 4px; */
+	margin: 0px 2px; /* a little L and R */
 	white-space: nowrap;
 	cursor: pointer;
 	font-size: 0.85rem;
