--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -44,11 +44,9 @@ body {
   }
 }
 
-/* Large rows on page; don't want these in a grid as we want height to vary */
+/* Large rows on page */
 .sections {
 	display: block;
-	/* dark blue text */
-	/* color: rgba(20, 80, 160, 0.95) */
 }
 
 .section {
@@ -58,7 +56,7 @@ body {
 	/* grid-auto-flow: column; */
   
 	/* a little extra gap between first 2 cols */
-	grid-column-gap: 6px;
+	grid-column-gap: 4px;
 	column-rule: 1px dotted var(--tint-color);
 
 	/* a little spacing at top and bottom of section */
@@ -67,26 +65,10 @@ body {
 	border-bottom: solid 1px var(--tint-color);
 }
 
-/* New for a2: [items] slides under [info] if too narrow */
-/* @media screen and (width <= var(--minBreakPoint)) { */
-@media screen and (width <= 600px) {
-  .section {
-    grid-template-columns: 1fr;
-  }
-	.sectionInfo {
-		border-bottom: solid 0.5px var(--tint-color);
-	}
-}
-
-/* turn on bottom border of last item (from theme CSS) */
-/* .section:last-child {
-	border-bottom: solid 1px var(--tint-color);
-} */
-
 .sectionInfo {
 	display: block;
-	padding-block-start: 8px;
-	padding-block-end: 6px;
+	padding-block-start: 0.3rem;
+	padding-block-end: 0.2rem;
 	padding-inline-start: 0.5rem;
 	padding-inline-end: 0.5rem;
 	background-color: var(--bg-alt-color);
@@ -96,19 +78,51 @@ body {
 	font-weight: 400;
 	text-align: center;
 	padding-right: 0.3rem;
-	padding-block-start: 1px;
+	padding-top: 1px;
 }
-.sectionName { /* column 1's title */
+.sectionName  {
 	font-size: 1.0rem;
-	font-weight: 700; /* make noteTitles bold */
+	/* make noteTitles bold */
+	font-weight: 700;
 	margin: unset;
-	padding-block-start: 0.1rem;
-	padding-block-end: 0.3rem;
+	padding-top: 0px;
+	padding-bottom: 0.2rem;
 }
-.sectionDescription { /* column 1's description */
-	font-size: 0.85rem; /* smaller */
+.sectionDescription {
+	/* a bit smaller */
+	font-size: 0.85rem;
 	margin: unset;
+	padding-top: 0px;
+	align-self: self-end;
 }
+
+/* If rather narrow, slide [items] slides under [info] */
+/* This needs to come after the earlier definitions to take priority */
+@media screen and (width <= 600px) {
+  .section {
+    grid-template-columns: 1fr;
+  }
+	.sectionInfo {
+		border-bottom: solid 0.5px var(--tint-color);
+		display: grid;
+		/* now make this area grid column-based not row-based */
+		grid-template-columns: max-content auto;
+		padding-top: 0.4rem;
+	}
+	.sectionName {
+		/* turn off padding under section name */
+		padding-top: 0.1rem;
+		padding-bottom: 0rem;
+		padding-left: 1px;
+		/* some padding to right */
+		padding-right: 0.5rem;
+	}
+}
+
+/* turn on bottom border of last item (from theme CSS) */
+/* .section:last-child {
+	border-bottom: solid 1px var(--tint-color);
+} */
 
 /* Inner grid for details of a section */
 .sectionItemsGrid {
@@ -130,7 +144,7 @@ body {
 	/* The important trick to avoiding bad wrapping at end of columns */
 	break-inside: avoid;
 	display: grid;
-	grid-template-columns: [icon] 1rem [item-details] minmax(20rem, 30rem);
+	grid-template-columns: [icon] 1rem [item-details] auto; /* was: minmax(20rem, 30rem); */
 	padding: 3px 4px 0px 4px; /* no bottom padding */
 	border: 0px none;
 	column-gap: 6px;
@@ -199,7 +213,7 @@ body {
 	border-radius: 4px;
 	box-shadow: 1px 1px 1px 0px rgb(from var(--fg-main-color) r g b / 0.3);
 	padding: 2px 3px 0px 3px;
-	margin: 0px 2px; /* a little L and R */
+	margin: 2px 2px; /* a little all round */
 	white-space: nowrap;
 	cursor: pointer;
 	font-size: 0.85rem;
@@ -263,7 +277,7 @@ body {
 	padding-left: 0.3rem;
 }
 .pad-right {	/* add space after icon */
-	padding-right: 0.3em;
+	padding-right: 0.1em;
 }
 .space-under {	/* add space under item */
 	padding-bottom: 0.3em;
@@ -298,7 +312,7 @@ body {
 	color: var(--tint-color) !important;
 }
 /* .multi-cols { /* allow multi-column flow: set max columns and min width, and some other bits and pieces. Reference: https://drafts.csswg.org/css-multicol/#the-multi-column-model */
-	column-count: 3;
+/*	column-count: 3;
 	column-fill: balance;
 	column-width: 25rem;
 	column-gap: 1rem;
