--- a/jgclark.Reviews/requiredFiles/projectList.css
+++ b/jgclark.Reviews/requiredFiles/projectList.css
@@ -1,7 +1,9 @@
 /* CSS specific to reviewList() from jgclark.Reviews plugin */
 
 body {
-  padding: 0rem 0.25rem; /* a little breathing room around whole content */
+  /* a little breathing room around whole content */
+  padding: 0rem 0.25rem; 
+  /* reset as theme inflates it */
 }
 /* add space below to better balance with spacing around H3 headings */
 table {
@@ -55,28 +57,55 @@ table tbody tr:first-child {
 table tbody tr:last-child {
   border-bottom: 1px solid var(--tint-color);
 }
+/* turn off outer table left border */
 table tr td:first-child {
-  border-left: 0px; /* turn off outer table left border */
+  border-left: 0px;
 }
+/* turn off outer table left border */
 table tr th:first-child {
-  border-left: 0px; /* turn off outer table left border */
+  border-left: 0px; 
 }
 /* turn off outer table right borders */
 table tr td:last-child, table tr th:last-child {
   border-right: 0px;
 }
-/* make noteTitles bold */
+
+/* allow multi-column flow: set max columns and min width, and some other bits and pieces */
+.multi-cols {
+  column-count: 3; column-width: 30rem; column-gap: 2rem; column-rule: 1px dotted var(--tint-color);
+}
+
+/* -------------------------------------------------------- */
+
+button, input {
+  color: var(--fg-main-color);
+  font-weight: 500;
+  border-radius: 4px;
+}
+.fake-button a {
+  color: var(--fg-main-color);
+  background-color: #FFFFFF; /* or dark #5E5E5E */
+  font-weight: 500;
+  text-decoration: none;
+  border-color: #DFE0E0;
+  border-radius: 4px;
+  margin: 2px 1px;
+  padding: 1px 4px;
+  box-shadow: 0 1px 1px #CBCBCB; /* or dark #6F6F6F */
+  /* no wrapping (i.e. line break) within the button display */
+  white-space: nowrap;
+}
+/* make noteTitles bold and coloured */
 .noteTitle {
-  font-weight: 700; text-decoration: none;
+  color: var(--tint-color);
+  font-weight: 700; 
+  text-decoration: none;
 }
 /* make noteTitle links underlined on mouse hover */
 .noteTitle a:hover {
   text-decoration: underline;
 }
-/* allow multi-column flow: set max columns and min width, and some other bits and pieces */
-.multi-cols {
-  column-count: 3; column-width: 30rem; column-gap: 2rem; column-rule: 1px dotted var(--tint-color);
-}
+
 /* set fa icon colour to tint color */
 i.fa-solid, i.fa-regular {
   color: var(--tint-color);
@@ -109,6 +138,15 @@ i.fa-solid, i.fa-regular {
 .circle-icon {
   font-size: 1.8rem;
 }
+/* add space before/after icons */
+.pad-left {
+	padding-left: 0.2rem;
+}
+.pad-right {
+	padding-right: 0.2em;
+}
+
+/* -------------------------------------------------------- */
 /* Tooltip block */
 .tooltip { position: relative; display: inline-block; }
 /* Tooltip text */
@@ -127,7 +165,7 @@ i.fa-solid, i.fa-regular {
 /* from [Pure CSS3 iOS switch checkbox.](https://codeburst.io/pure-css3-input-as-the-ios-checkbox-8b6347d5cefb) */
 input.apple-switch {
   position: relative;
-  -webkit-appearance: none;
+  -webkit-appearance: none; /* FIXME: deprecated approach */
   outline: none;
   width: 2.0rem; /* 50px; */
   height: 1.1rem; /* 30px; */
