--- a/jgclark.Dashboard/requiredFiles/dashboard.css
+++ b/jgclark.Dashboard/requiredFiles/dashboard.css
@@ -51,7 +51,7 @@ body {
 
 .section {
 	display: grid;
-  grid-template-columns: [info] minmax(6rem,10rem) [items] auto;
+  grid-template-columns: [info] minmax(6rem,11rem) [items] auto;
   grid-template-rows: min-content;
 	/* grid-auto-flow: column; */
   
@@ -131,7 +131,6 @@ body {
 	/* allow multi-column flow: set max columns and min width, and some other bits and pieces. Reference: https://drafts.csswg.org/css-multicol/#the-multi-column-model */
 	column-count: 3;
 	column-fill: balance;
-	/* or auto */
 	column-width: 25rem;
 	/* column-gap: 1rem; */
 	column-rule: 1px dotted var(--tint-color);
@@ -148,15 +147,15 @@ body {
 	padding: 3px 4px 0px 4px; /* no bottom padding */
 	border: 0px none;
 	column-gap: 6px;
-	align-self: start;
 	/* vertical in containing block */
-	justify-self: right;
+	align-self: start;
 	/* horizontal in containing block */
+	justify-self: right;
 	/* border-collapse: collapse; */
-	align-items: start;
 	/* vertical for all items this contains */
-	justify-items: start;
+	align-items: start;
 	/* horizontal for all items this contains */
+	justify-items: start;
 }
 /* General item icon details */
 .itemIcon {
@@ -185,33 +184,22 @@ body {
 	break-inside: avoid;
 	line-height: 1.2rem; /* get from a variable */
 }
-/* Show click pointer over buttons and equivalent */
-.fake-button, .clickTarget {
-	cursor: pointer;
-}
-
 /* ------------------------------------------------------------------ */
 
-/* for main UI buttons */
-.mainButton { /* main UI action buttons: a little more pronounced */
-	background-color: var(--bg-alt-color);
-	font-size: 0.9rem;
-	font-weight: 600;
-	border: 1px var(--tint-color);
-	box-shadow: 0 1px 1px 0px rgba(0,0,0,0.3); /*#888;*/
-	padding: 2px 5px 2px 5px;
-	margin: 2px 4px;
+@layer A { /* all buttons, but at lower priority */
+button, input {
+	background-color: var(--bg-main-color);
+	color: var(--fg-main-color);
+	border: 1px solid rgb(from var(--fg-main-color) r g b / 0.7);
+	box-shadow: 1px 1px 1px 0px rgb(from var(--fg-main-color) r g b / 0.3);
+}
 }
 
 /* For buttons that trigger callbacks */
 .XCBButton {
-	color: var(--fg-main-color);
-	background-color: var(--bg-main-color);
 	font-weight: 500;
-	/* border-color: #DFE0E0; */
 	border-style: none;
 	border-radius: 4px;
-	box-shadow: 1px 1px 1px 0px rgb(from var(--fg-main-color) r g b / 0.3);
 	padding: 2px 3px 0px 3px;
 	margin: 2px 2px; /* a little all round */
 	white-space: nowrap;
@@ -224,6 +212,14 @@ body {
 	text-decoration: none;
 	color: var(--fg-main-color);
 }
+
+/* Show click pointer over buttons and equivalent */
+button, .fake-button, .clickTarget {
+	cursor: pointer;
+}
+
+/* ------------------------------------------------------------------ */
+
 /* Add tooltips to these buttons, thanks to CSS-only technique at https://www.youtube.com/watch?v=M4lQwiUvGlY&t=157s */
 .tooltip {
 	position: relative;
